--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -4,23 +4,6 @@
 	});
 </script>
 <div id="ip">Client ip is <%= @client_ip %></div>
-Lat(w3c) :<div id="lat"></div>
-Lon(w3c) :<div id="lon"></div>
+<div id="lat"></div>
+<div id="lon"></div>
 <div id="googlelocation"></div>
-	<script type="text/javascript" src="http://www.google.com/jsapi?key=ABQIAAAAp04yNttlQq-7b4aZI_jL5hQYPm-xtd00hTQOC0OXpAMO40FHAxQMnH50uBbWoKVHwgpklyirDEregg"></script>
-	<script type="text/javascript">
-		if(google.loader.ClientLocation)
-		{
-			visitor_lat = google.loader.ClientLocation.latitude;
-			visitor_lon = google.loader.ClientLocation.longitude;
-			visitor_city = google.loader.ClientLocation.address.city;
-			visitor_region = google.loader.ClientLocation.address.region;
-			visitor_country = google.loader.ClientLocation.address.country;
-			visitor_countrycode = google.loader.ClientLocation.address.country_code;
-			document.getElementById('googlelocation').innerHTML = '<p>Lat/Lon (google): ' + visitor_lat + ' / ' + visitor_lon + '</p><p>Location: ' + visitor_city + ', ' + visitor_region + ', ' + visitor_country + ' (' + visitor_countrycode + ')</p>';
-		}
-		else
-		{
-			document.getElementById('googlelocation').innerHTML = '<p>Whoops!</p>';
-		}
-	</script>
