--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -3,7 +3,14 @@
 		$(window).load(initiate_geolocation);
 	});
 </script>
-<div id="ip">Client ip is <%= @client_ip %></div>
-<div id="lat"></div>
-<div id="lon"></div>
-<div id="googlelocation"></div>
+<p id="geolocation">
+  lat : <span id="lat"></span><br />
+  lon : <span id="lon"></span>
+</p>
+<!--
+<%= form_for(@v) do |f| %>
+  <%= f.text_field :ip, :value=>@client_ip %>
+  <%= f.text_field :latitude, :id=>"lat" %>
+  <%= f.text_field :longitude, :id=>"lon" %>
+  <%= f.submit "Continue" %>
+<% end %> -->
